[gd_scene load_steps=4 format=2]

[ext_resource path="res://themes/LabelTheme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/ui/MonsterPanel.gd" type="Script" id=2]
[ext_resource path="res://scenes/Status.tscn" type="PackedScene" id=3]

[node name="MonsterPanel" type="Node2D"]
script = ExtResource( 2 )

[node name="LifeTotal" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 18.0
margin_right = 115.0
margin_bottom = 23.0
color = Color( 0.329412, 0.388235, 0.254902, 1 )

[node name="LifeBar" type="ColorRect" parent="LifeTotal"]
margin_left = 1.0
margin_top = 1.0
margin_right = 112.0
margin_bottom = 4.0
color = Color( 0.462745, 0.517647, 0.282353, 1 )

[node name="TextContainer" type="Node2D" parent="."]
position = Vector2( 2, 9 )
scale = Vector2( 0.25, 0.25 )

[node name="Name" type="Label" parent="TextContainer"]
margin_top = -36.0
margin_right = 252.0
theme = ExtResource( 1 )
text = "Goblin shaman IV"
valign = 1
clip_text = true

[node name="Stats" type="Label" parent="TextContainer"]
margin_right = 288.0
margin_bottom = 36.0
theme = ExtResource( 1 )
text = "AC:8 Pr:2 PH:2 WI:3"
valign = 1
clip_text = true

[node name="HP" type="Label" parent="TextContainer"]
visible = false
margin_top = 36.0
margin_right = 468.0
margin_bottom = 72.0
theme = ExtResource( 1 )
text = "3/8"
align = 1
valign = 1

[node name="Statuses" type="Node2D" parent="."]
position = Vector2( 73, 4 )

[node name="Status" parent="Statuses" instance=ExtResource( 3 )]

[node name="Status2" parent="Statuses" instance=ExtResource( 3 )]
position = Vector2( 11, 0 )

[node name="Status3" parent="Statuses" instance=ExtResource( 3 )]
position = Vector2( 22, 0 )

[node name="Status4" parent="Statuses" instance=ExtResource( 3 )]
position = Vector2( 33, 0 )

[node name="Selected" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
margin_right = 117.0
margin_bottom = 25.0
color = Color( 0.247059, 0.313726, 0.247059, 1 )
